# vscode

./: .eslintrc.json  .gitignore  .vscode-test.js  .yarnrc  CONTRIBUTING.md  CodeQL.yml  DEPENDENTS.md  LICENSE  README.md  SECURITY.md  ThirdPartyNotices.txt  cglicenses.json  gulpfile.js  package-lock.json  package.json
.devcontainer/: devcontainer-lock.json
.eslintplugin/: code-amd-node-module.ts  code-declare-service-brand.ts  code-ensure-no-disposables-leak-in-test.ts  code-import-patterns.ts  code-layering.ts  code-must-use-result.ts  code-must-use-super-dispose.ts  code-no-global-document-listener.ts  code-no-look-behind-regex.ts  code-no-native-private.ts  code-no-nls-in-standalone-editor.ts  code-no-standalone-editor.ts  code-no-test-async-suite.ts  code-no-test-only.ts  code-no-unexternalized-strings.ts  code-no-unused-expressions.ts  code-translation-remind.ts  index.js  utils.ts  vscode-dts-cancellation.ts  vscode-dts-create-func.ts  vscode-dts-event-naming.ts  vscode-dts-interface-naming.ts  vscode-dts-literal-or-types.ts  vscode-dts-provider-naming.ts  vscode-dts-region-comments.ts  vscode-dts-string-type-literals.ts  vscode-dts-use-thenable.ts  vscode-dts-vscode-in-comments.ts
.github/: classifier.json  commands.json  dependabot.yml
.github/workflows/: NPM.yml  Node.yml  Rust.yml  rich-navigation.yml.off
Source/: bootstrap-amd.js  bootstrap-cli.ts  bootstrap-esm.ts  bootstrap-fork.js  bootstrap-fork.ts  bootstrap-import.ts  bootstrap-meta.ts  bootstrap-node.js  bootstrap-node.ts  bootstrap-server.ts  bootstrap-window.js  bootstrap-window.ts  bootstrap.js  buildfile.js  cli.js  cli.ts  main.js  main.ts  server-cli.js  server-cli.ts  server-main.js  server-main.ts  tsconfig.base.json  tsconfig.json  tsconfig.monaco.json  tsconfig.vscode-dts.json  tsec.exemptions.json
Source/docs/: index.html  modules.html
Source/typings/: base-common.d.ts  editContext.d.ts  require.d.ts  thenable.d.ts  vscode-globals-modules.d.ts  vscode-globals-product.d.ts  vscode-globals-ttp.d.ts
Source/vs/: amdX.ts  css.build.ts  css.ts  loader.d.ts  loader.js  monaco.d.ts  nls.build.ts  nls.messages.ts  nls.mock.ts  nls.ts
Source/vscode-dts/: README.md  vscode.d.ts  vscode.proposed.aiRelatedInformation.d.ts  vscode.proposed.aiTextSearchProvider.d.ts  vscode.proposed.aiTextSearchProviderNew.d.ts  vscode.proposed.attributableCoverage.d.ts  vscode.proposed.authGetSessions.d.ts  vscode.proposed.authLearnMore.d.ts  vscode.proposed.authSession.d.ts  vscode.proposed.canonicalUriProvider.d.ts  vscode.proposed.chat.d.ts  vscode.proposed.chatAgents.d.ts  vscode.proposed.chatAgents2.d.ts  vscode.proposed.chatAgents2Additions.d.ts  vscode.proposed.chatEditing.d.ts  vscode.proposed.chatParticipant.d.ts  vscode.proposed.chatParticipantAdditions.d.ts  vscode.proposed.chatParticipantPrivate.d.ts  vscode.proposed.chatProvider.d.ts  vscode.proposed.chatReferenceBinaryData.d.ts  vscode.proposed.chatRequestAccess.d.ts  vscode.proposed.chatTab.d.ts  vscode.proposed.chatVariableResolver.d.ts  vscode.proposed.chatVariables.d.ts  vscode.proposed.codeActionRanges.d.ts  vscode.proposed.codiconDecoration.d.ts  vscode.proposed.commentReactor.d.ts  vscode.proposed.commentReveal.d.ts  vscode.proposed.commentThreadApplicability.d.ts  vscode.proposed.commentingRangeHint.d.ts  vscode.proposed.commentsDraftState.d.ts  vscode.proposed.contribCommentPeekContext.d.ts  vscode.proposed.createFileSystemWatcher.d.ts  vscode.proposed.customEditorMove.d.ts  vscode.proposed.debugFocus.d.ts  vscode.proposed.debugVisualization.d.ts  vscode.proposed.defaultChatAgent.d.ts  vscode.proposed.defaultChatParticipant.d.ts  vscode.proposed.diffCommand.d.ts  vscode.proposed.diffContentOptions.d.ts  (+89 more)
cli/: CONTRIBUTING.md  Cargo.toml  ThirdPartyNotices.txt  build.rs
cli/Source/: async_pipe.rs  auth.rs  commands.rs  constants.rs  desktop.rs  download_cache.rs  json_rpc.rs  lib.rs  log.rs  msgpack_rpc.rs  options.rs  rpc.rs  self_update.rs  singleton.rs  state.rs  tunnels.rs  update_service.rs  util.rs
cli/Source/commands/: args.rs  context.rs  output.rs  serve_web.rs  tunnels.rs  update.rs  version.rs
cli/Source/desktop/: version_manager.rs
cli/Source/tunnels/: challenge.rs  code_server.rs  control_server.rs  dev_tunnels.rs  legal.rs  local_forwarding.rs  nosleep.rs  nosleep_linux.rs  nosleep_macos.rs  nosleep_windows.rs  paths.rs  port_forwarder.rs  protocol.rs  server_bridge.rs  server_multiplexer.rs  service.rs  service_linux.rs  service_macos.rs  service_windows.rs  shutdown_signal.rs  singleton_client.rs  singleton_server.rs  socket_signal.rs  wsl_detect.rs
cli/Source/util/: app_lock.rs  command.rs  errors.rs  file_lock.rs  http.rs  input.rs  io.rs  is_integrated.rs  machine.rs  os.rs  prereqs.rs  ring_buffer.rs  sync.rs  tar.rs  zipper.rs
cli/src/: self_update.rs  singleton.rs  state.rs  update_service.rs
cli/src/commands/: output.rs  serve_web.rs
cli/src/tunnels/: nosleep_macos.rs  shutdown_signal.rs
extensions/: esbuild-webview-common.js  mangle-loader.js  package.json  postinstall.mjs  shared.webpack.config.js
extensions/bat/: language-configuration.json  package.json
extensions/clojure/: language-configuration.json  package.json
extensions/coffeescript/: language-configuration.json  package.json
extensions/configuration-editing/: extension-browser.webpack.config.js  extension.webpack.config.js  package.json
extensions/cpp/: language-configuration.json  package.json
extensions/csharp/: cgmanifest.json  package.json  (+1 more)
remote/: package.json
scripts/: code-cli.sh  code-perf.js  code-server.js  code-server.sh  code-web.js  code-web.sh  code.sh  debugger-scripts-api.d.ts  generate-definitelytyped.sh  hot-reload-injected-script.js  node-electron.sh  playground-server.ts  test-documentation.sh  test-integration.sh  test-remote-integration.sh  test-web-integration.sh  test.sh  update-xterm.js  xterm-update.js
src/: bootstrap-amd.js  bootstrap-meta.js  bootstrap-node.js  bootstrap-window.js  bootstrap.js  cli.js  main.js  server-main.js  tsconfig.monaco.json  tsconfig.tsec.json
test/: README.md
(+6639 files in other folders)
