[package]
name = "code-cli"
version = "0.1.0"
edition = "2021"
default-run = "code"

[lib]
name = "cli"
path = "src/lib.rs"

[[bin]]
name = "code"

[dependencies]
futures = "0.3.29"
clap = { version = "4.4.7", features = ["derive", "env"] }
open = "5.0.0"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "stream", "native-tls"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["compat", "codec"] }
flate2 = { version = "1.0.28", default-features = false, features = ["zlib"] }
zip = { version = "0.6.6", default-features = false, features = ["time", "deflate-zlib"] }
regex = "1.10.2"
lazy_static = "1.4.0"
sysinfo = { version = "0.29.10", default-features = false }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
rmp-serde = "1.1.2"
uuid = { version = "1.5", features = ["serde", "v4"] }
dirs = "5.0.1"
rand = "0.8.5"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
serde_bytes = "0.11.12"
chrono = { version = "0.4.31", features = ["serde", "std", "clock"], default-features = false }
gethostname = "0.4.3"
libc = "0.2.149"
tunnels = { git = "https://github.com/microsoft/dev-tunnels", rev = "97233d20448e1c3cb0e0fd9114acf68c7e5c0249", default-features = false, features = ["connections"] }
keyring = { version = "2.0.5", default-features = false, features = ["linux-secret-service-rt-tokio-crypto-openssl"] }
dialoguer = "0.11.0"
hyper = { version = "0.14.27", features = ["server", "http1", "runtime"] }
indicatif = "0.17.7"
tempfile = "3.8.1"
clap_lex = "0.6.0"
url = "2.4.1"
async-trait = "0.1.74"
log = "0.4.20"
const_format = "0.2.32"
sha2 = "0.10.8"
base64 = "0.21.5"
shell-escape = "0.1.5"
thiserror = "1.0.50"
cfg-if = "1.0.0"
pin-project = "1.1.3"
console = "0.15.7"
bytes = "1.5.0"
tar = "0.4.40"

[build-dependencies]
serde = { version="1.0.190", features = ["derive"] }
serde_json = "1.0.107"

[target.'cfg(windows)'.dependencies]
winreg = "0.51.0"
winapi = "0.3.9"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.3"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }

[patch.crates-io]
russh = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }
russh-cryptovec = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }
russh-keys = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }

[profile.release]
strip = true
lto = true
codegen-units = 1

[features]
default = []
vscode-encrypt = []
