[package]
name = "code-cli"
version = "0.1.0"
edition = "2021"
default-run = "code"

[lib]
name = "cli"
path = "src/lib.rs"

[[bin]]
name = "code"

[dependencies]
futures = { version = "0.3.31" }
clap = { version = "4.5.20", features = ["derive", "env"] }
open = { version = "5.3.0" }
reqwest = { version = "0.12.9", default-features = false, features = [
	"json",
	"stream",
	"native-tls",
] }
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["compat", "codec"] }
flate2 = { version = "1.0.34", default-features = false, features = ["zlib"] }
zip = { version = "2.2.0", default-features = false, features = [
	"time",
	"deflate-zlib",
] }
regex = { version = "1.11.1" }
lazy_static = { version = "1.5.0" }
sysinfo = { version = "0.32.0", default-features = false }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = { version = "1.0.132" }
rmp-serde = "1.3.0"
uuid = { version = "1.11", features = ["serde", "v4"] }
dirs = { version = "5.0.1" }
rand = { version = "0.8.5" }
opentelemetry = { version = "0.26.0", features = ["rt-tokio"] }
serde_bytes = { version = "0.11.15" }
chrono = { version = "0.4.38", features = [
	"serde",
	"std",
	"clock",
], default-features = false }
gethostname = { version = "0.5.0" }
libc = { version = "0.2.161" }
tunnels = { git = "https://github.com/microsoft/dev-tunnels", rev = "8cae9b2a24c65c6c1958f5a0e77d72b23b5c6c30", default-features = false, features = [
	"connections",
] }
keyring = { version = "3.6.1", default-features = false, features = [
	"linux-secret-service-rt-tokio-crypto-openssl",
	"platform-windows",
	"platform-macos",
	"linux-keyutils",
] }
dialoguer = { version = "0.11.0" }
hyper = { version = "1.5.0", features = ["server", "http1", "runtime"] }
indicatif = { version = "0.17.8" }
tempfile = { version = "3.13.0" }
clap_lex = { version = "0.7.2" }
url = { version = "2.5.2" }
async-trait = "0.1.83"
log = { version = "0.4.22" }
const_format = { version = "0.2.33" }
sha2 = { version = "0.10.8" }
base64 = { version = "0.22.1" }
shell-escape = "0.1.5"
thiserror = { version = "1.0.65" }
cfg-if = "1.0.0"
pin-project = "1.1.7"
console = { version = "0.15.8" }
bytes = { version = "1.8.0" }
tar = { version = "0.4.42" }

[build-dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = { version = "1.0.132" }

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.52.0" }
winapi = { version = "0.3.9" }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.0"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5.0.1", default-features = false, features = ["tokio"] }

[patch.crates-io]
russh = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }
russh-cryptovec = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }
russh-keys = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }

[profile.release]
strip = true
lto = true
codegen-units = 1

[features]
default = []
vsda = []
vscode-encrypt = []
